--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@
     font-weight: Bold;
     border-radius: 8px;
     text-decoration: none;
+    z-index: 36;
 }
 
 .kha-sam-button:hover {
@@ -20,5 +21,5 @@
 }
 
 #kha-sticky-admin-menu h2 {
-    margin: 0;
+    margin: 0 0 15px;
 }
